--- a/configs/mc_maze_medium-edited-fewerFactors30.yaml
+++ b/configs/mc_maze_medium-edited-fewerFactors30.yaml
@@ -10,7 +10,7 @@ MODEL:
   CO_DIM: 4
   IC_DIM: 100
   GEN_DIM: 100
-  FAC_DIM: 40
+  FAC_DIM: 30
   DROPOUT_RATE: 0.05 # OVERWRITTEN
   CD_RATE: 0.5 # OVERWRITTEN
   CD_PASS_RATE: 0.0
@@ -49,5 +49,5 @@ TRAIN:
   TUNE_MODE: True
   LOG_HPS: True
   USE_TB: False
-  MODEL_DIR: '' # OVERWRITTEN
+  MODEL_DIR: '/home/jupyter/NeuralLatents-autolfads/neural_latents_caltech/lfads_models/model_outputs_medium_fewerFac30' # OVERWRITTEN
   OVERWRITE: True
